Update Student and Faculty form dashboard student record Faculty records

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/aryanLogo.jpg" />
-    <link rel="shortcut icon" href="/aryanLogo.jpg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aryan Institute of Engineering & Technology - IMS</title>
+    <title>AIET | Aryan Institute Matrix</title>
   </head>
   <body>
     <div id="root"></div>
